removed warnings from PDFRead